# meta-kegg-web-wrapper

./: .gitignore  DOCKERHUB_README.md  Dockerfile  README.md  build_frontend.sh  config.template.yaml  docker-compose.yaml  generate_reqtxt.sh  openapi.json  scratchbook.py
.github/workflows/: build-push-server.yaml
backend/: README.md  generate_config_template.py  pyproject.toml  requirements.txt  scratchbook.py
backend/dev_resources/redis/: docker-compose.yaml
backend/mekeweserver/: config.py  db.py  fastapi_app.py  fastapi_routes.py  log.py  main.py  model.py  pipeline_clerk.py  pipeline_status_clerk.py  routes.py  tmp.py  utils.py  worker.py
backend/mekeweserver/pipeline_runner/: pipeline_processor.py  pipeline_queue.py  worker.py
backend/mekeweserver/pipeline_worker/: pipeline_output_catcher.py  pipeline_processor.py  pipeline_worker.py
backend/tests/: .env  README.md  main.py  statics.py  tests_pipeline_run.py  utils.py
frontend/: app.vue  bun.lockb  error.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/Layout/: Footer.vue  Header.vue  index.vue
frontend/components/Static/: IntroBox.vue
frontend/components/Step/: 0.vue  1.vue  2.vue  3.vue  4.vue  5.vue
frontend/components/UI/: BaseCard.vue  CustomInputField.vue
frontend/composables/: useClipboard.ts  useCopyToClipboard.ts  useCustomCopyToClipboard.ts
frontend/pages/: help.vue  index.vue
frontend/pages/[id]/: index.vue
frontend/stores/: configStore.ts  pipelineStore.ts
frontend/types/: config.ts  formState.ts  healthStatus.ts  index.ts  infoLinks.ts  pipelineStatus.ts
